fix drop shadows for dark mode

--- a/source/_docs/patterns/00-utilities/_variables.scss
+++ b/source/_docs/patterns/00-utilities/_variables.scss
@@ -274,3 +274,12 @@ $large: 1300px;
 --transition-speed--fast: 200ms;
 --ease--standard: ease;
 }
+/*------------------------------------------------------------------------------
+6. Dark Mode
+------------------------------------------------------------------------------*/
+[data-theme="dark"] {
+  --shadow--soft: 0 0.1875rem 0.375rem rgba(var(--black--rgb), 0.16),
+  0 0.1875rem 0.375rem rgba(var(--blue--rgb), 0.75);
+  --shadow--soft--hover: 0 0.0625rem 0.1875rem rgba(var(--black--rgb), 0.12),
+  0 0.0625rem 0.125rem rgba(var(--blue--rgb), 0.75);  
+}
