--- a/source/_docs/patterns/03-organisms/navigation/main-navigation/_main-navigation.scss
+++ b/source/_docs/patterns/03-organisms/navigation/main-navigation/_main-navigation.scss
@@ -168,9 +168,6 @@ Mixins
   }
   @media (min-width: $medium) {
     flex-flow: column;
-    a {
-      margin: var(--space--sm);
-    }
     &:before {
       place-self: center;
 
